--- a/resignator/src/main/resources/fxml/JarsignerConfig.fxml
+++ b/resignator/src/main/resources/fxml/JarsignerConfig.fxml
@@ -5,20 +5,22 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bekwam.resignator.JarsignerConfigController">
    <children>
-      <GridPane vgap="4.0">
+      <GridPane hgap="10.0" vgap="4.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Keystore" GridPane.halignment="RIGHT">
@@ -47,20 +49,25 @@
                </GridPane.margin>
             </Label>
             <TextField fx:id="tfKeystore" GridPane.columnIndex="1" />
-            <TextField fx:id="tfKeypass" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="tfStorepass" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="tfAlias" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <ChoiceBox fx:id="cbVerbose" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Confirm Keypass" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <Label text="Confirm Storepass" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+            <PasswordField fx:id="pfConfKeypass" onAction="#verifyKeypass" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <PasswordField fx:id="pfConfStorepass" onAction="#verifyStorepass" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <PasswordField fx:id="pfKeypass" onAction="#resetConfKeypass" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <PasswordField fx:id="pfStorepass" onAction="#resetConfStorepass" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="lblConfKeypass" text="Ok" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <Label fx:id="lblConfStorepass" text="Ok" GridPane.columnIndex="4" GridPane.rowIndex="2" />
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
       </GridPane>
-      <Separator prefWidth="200.0" />
-      <HBox alignment="CENTER_RIGHT">
+      <Separator />
+      <HBox alignment="CENTER">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" onAction="#save" text="Save" />
-            <Button mnemonicParsing="false" onAction="#cancel" text="Cancel">
+            <Button mnemonicParsing="false" onAction="#close" text="Close">
                <HBox.margin>
                   <Insets left="2.0" />
                </HBox.margin>
