--- a/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
+++ b/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.input.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bekwam.resignator.ResignatorAppMainViewController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+      minWidth="-Infinity" xmlns="http://javafx.com/javafx/8"
+      fx:controller="com.bekwam.resignator.ResignatorAppMainViewController">
    <children>
       <MenuBar VBox.vgrow="NEVER">
         <menus>
@@ -51,10 +50,24 @@
                   <Label text="Source JAR:" GridPane.halignment="RIGHT" />
                   <TextField fx:id="tfSourceFile" prefWidth="600.0" GridPane.columnIndex="1" />
                   <Button mnemonicParsing="false" onAction="#browseSource" text="Browse" GridPane.columnIndex="2" />
-                  <HBox GridPane.columnIndex="1" GridPane.rowIndex="2">
+                   <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#openJarsignerConfig" text="Configure" />
-                        <Button mnemonicParsing="false" onAction="#sign" text="Sign" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                         <Button mnemonicParsing="false" onAction="#openJarsignerConfig" text="Configure">
+                             <HBox.margin>
+                                 <Insets right="10.0"/>
+                             </HBox.margin>
+                         </Button>
+                         <CheckBox fx:id="ckReplace" mnemonicParsing="false" text="Replace existing signatures?">
+                             <HBox.margin>
+                                 <Insets right="10.0"/>
+                             </HBox.margin>
+                         </CheckBox>
+                         <Button mnemonicParsing="false" onAction="#sign" text="Sign" GridPane.columnIndex="1"
+                                 GridPane.rowIndex="2">
+                             <HBox.margin>
+                                 <Insets right="10.0"/>
+                             </HBox.margin>
+                         </Button>
                         <ProgressIndicator fx:id="piSignProgress" progress="0.0" visible="false">
                            <HBox.margin>
                               <Insets left="10.0" />
