[#9 status: Ready for Retest] source / target validation
Added style and popup to source and target JAR fields on main form

--- a/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
+++ b/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-      minWidth="-Infinity" xmlns="http://javafx.com/javafx/8"
-      fx:controller="com.bekwam.resignator.ResignatorAppMainViewController">
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bekwam.resignator.ResignatorAppMainViewController">
    <children>
       <MenuBar VBox.vgrow="NEVER">
         <menus>
@@ -48,24 +48,26 @@
               </rowConstraints>
                <children>
                   <Label text="Source JAR:" GridPane.halignment="RIGHT" />
-                  <TextField fx:id="tfSourceFile" prefWidth="600.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="tfSourceFile" onKeyPressed="#clearValidationErrors" onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1">
+                     <tooltip>
+                        <Tooltip text="Required - The JAR to sign" />
+                     </tooltip></TextField>
                   <Button mnemonicParsing="false" onAction="#browseSource" text="Browse" GridPane.columnIndex="2" />
                    <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <children>
                          <Button mnemonicParsing="false" onAction="#openJarsignerConfig" text="Configure">
                              <HBox.margin>
-                                 <Insets right="10.0"/>
+                                 <Insets right="10.0" />
                              </HBox.margin>
                          </Button>
                          <CheckBox fx:id="ckReplace" mnemonicParsing="false" text="Replace existing signatures?">
                              <HBox.margin>
-                                 <Insets right="10.0"/>
+                                 <Insets right="10.0" />
                              </HBox.margin>
                          </CheckBox>
-                         <Button mnemonicParsing="false" onAction="#sign" text="Sign" GridPane.columnIndex="1"
-                                 GridPane.rowIndex="2">
+                         <Button mnemonicParsing="false" onAction="#sign" text="Sign" GridPane.columnIndex="1" GridPane.rowIndex="2">
                              <HBox.margin>
-                                 <Insets right="10.0"/>
+                                 <Insets right="10.0" />
                              </HBox.margin>
                          </Button>
                         <ProgressIndicator fx:id="piSignProgress" progress="0.0" visible="false">
@@ -76,7 +78,10 @@
                      </children>
                   </HBox>
                   <Label text="Target JAR:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                  <TextField fx:id="tfTargetFile" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="tfTargetFile" onKeyPressed="#clearValidationErrors" onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <tooltip>
+                        <Tooltip text="Required - The signed JAR (Can be the same as Source JAR)" />
+                     </tooltip></TextField>
                   <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <children>
                         <Button mnemonicParsing="false" onAction="#browseTarget" text="Browse" GridPane.columnIndex="2" GridPane.rowIndex="1" />
