--- a/resignator/src/main/resources/css/resignator.css
+++ b/resignator/src/main/resources/css/resignator.css
@@ -20,3 +20,8 @@
 	-fx-font-size: 11px;
 }
 
+.tf-validation-error {
+	-fx-border-color: red;
+	-fx-border-radius: 4;
+	-fx-background-color: pink;
+}
