[#16] Adds needsSave flag on main view needsFlag is not being set in jarsigner config (incomplete ticket)

--- a/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
+++ b/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
@@ -13,7 +13,8 @@
             <items>
                   <MenuItem mnemonicParsing="false" onAction="#newProfile" text="New Profile" />
                   <MenuItem mnemonicParsing="false" onAction="#loadProfile" text="Load Profile" />
-                  <MenuItem mnemonicParsing="false" onAction="#saveProfile" text="Save Profile" />
+                <MenuItem fx:id="miSave" disable="true" mnemonicParsing="false" onAction="#saveProfile"
+                          text="Save Profile"/>
                   <MenuItem mnemonicParsing="false" onAction="#saveAsProfile" text="Save As Profile" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" onAction="#openSettings" text="Settings" />
