--- a/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
+++ b/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
@@ -13,8 +13,7 @@
             <items>
                   <MenuItem mnemonicParsing="false" onAction="#newProfile" text="New Profile" />
                   <MenuItem mnemonicParsing="false" onAction="#loadProfile" text="Load Profile" />
-                <MenuItem fx:id="miSave" disable="true" mnemonicParsing="false" onAction="#saveProfile"
-                          text="Save Profile"/>
+                <MenuItem fx:id="miSave" disable="true" mnemonicParsing="false" onAction="#saveProfile" text="Save Profile" />
                   <MenuItem mnemonicParsing="false" onAction="#saveAsProfile" text="Save As Profile" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" onAction="#openSettings" text="Settings" />
@@ -24,6 +23,7 @@
           </Menu>
             <Menu mnemonicParsing="false" text="View">
               <items>
+                  <CheckMenuItem mnemonicParsing="false" onAction="#showProfileBrowser" selected="true" text="Show Profile Browser" />
                   <CheckMenuItem mnemonicParsing="false" onAction="#showConsole" selected="true" text="Show Console" />
               </items>
             </Menu>
@@ -34,90 +34,119 @@
           </Menu>
         </menus>
       </MenuBar>
-      <SplitPane fx:id="sp" dividerPositions="0.5" orientation="VERTICAL" VBox.vgrow="ALWAYS">
+      <SplitPane fx:id="outerSp" dividerPositions="0.3" VBox.vgrow="ALWAYS">
          <items>
-            <GridPane hgap="10.0" SplitPane.resizableWithParent="false">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <VBox fx:id="profileBrowser">
                <children>
-                  <Label text="Source JAR:" GridPane.halignment="RIGHT" />
-                  <TextField fx:id="tfSourceFile" onKeyPressed="#clearValidationErrors" onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1">
-                     <tooltip>
-                        <Tooltip text="Required - The JAR to sign" />
-                     </tooltip></TextField>
-                  <Button mnemonicParsing="false" onAction="#browseSource" text="Browse" GridPane.columnIndex="2" />
-                   <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <HBox styleClass="consoleTitle">
                      <children>
-                         <Button mnemonicParsing="false" onAction="#openJarsignerConfig" text="Configure">
-                             <HBox.margin>
-                                 <Insets right="10.0" />
-                             </HBox.margin>
-                         </Button>
-                         <CheckBox fx:id="ckReplace" mnemonicParsing="false" text="Replace existing signatures?">
-                             <HBox.margin>
-                                 <Insets right="10.0" />
-                             </HBox.margin>
-                         </CheckBox>
-                         <Button mnemonicParsing="false" onAction="#sign" text="Sign" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                             <HBox.margin>
-                                 <Insets right="10.0" />
-                             </HBox.margin>
-                         </Button>
-                        <ProgressIndicator fx:id="piSignProgress" progress="0.0" visible="false">
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </ProgressIndicator>
+                        <Label text="Profile Browser" />
                      </children>
                   </HBox>
-                  <Label text="Target JAR:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                  <TextField fx:id="tfTargetFile" onKeyPressed="#clearValidationErrors" onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <tooltip>
-                        <Tooltip text="Required - The signed JAR (Can be the same as Source JAR)" />
-                     </tooltip></TextField>
-                  <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <AnchorPane>
                      <children>
-                        <Button mnemonicParsing="false" onAction="#browseTarget" text="Browse" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" onAction="#copySourceToTarget" text="Copy">
-                           <HBox.margin>
-                              <Insets left="2.0" />
-                           </HBox.margin></Button>
-                     </children>
-                  </HBox>
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-               </padding>
-            </GridPane>
-            <VBox fx:id="console">
-               <children>
-                  <HBox styleClass="consoleTitle" VBox.vgrow="NEVER">
-                     <children>
-                        <Label text="Console" />
-                     </children>
-                  </HBox>
-                <AnchorPane minHeight="0.0" minWidth="0.0" styleClass="console" VBox.vgrow="ALWAYS">
-                     <children>
-                        <TextArea fx:id="txtConsole" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <ListView fx:id="lvProfiles" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" onAction="#deleteProfile" text="Delete" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu>
+                        </ListView>
                      </children>
                   </AnchorPane>
                </children>
             </VBox>
+            <SplitPane fx:id="sp" dividerPositions="0.5" orientation="VERTICAL" VBox.vgrow="ALWAYS">
+               <items>
+                  <GridPane hgap="10.0" SplitPane.resizableWithParent="false">
+                    <columnConstraints>
+                      <ColumnConstraints minWidth="70.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="110.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Source JAR:" GridPane.halignment="RIGHT" />
+                        <TextField fx:id="tfSourceFile" onKeyPressed="#clearValidationErrors" onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1">
+                           <tooltip>
+                              <Tooltip text="Required - The JAR to sign" />
+                           </tooltip>
+                        </TextField>
+                        <Button mnemonicParsing="false" onAction="#browseSource" text="Browse" GridPane.columnIndex="2" />
+                         <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <children>
+                               <Button mnemonicParsing="false" onAction="#openJarsignerConfig" text="Configure">
+                                   <HBox.margin>
+                                       <Insets right="10.0" />
+                                   </HBox.margin>
+                               </Button>
+                               <CheckBox fx:id="ckReplace" mnemonicParsing="false" text="Replace existing signatures?">
+                                   <HBox.margin>
+                                       <Insets right="10.0" />
+                                   </HBox.margin>
+                               </CheckBox>
+                               <Button mnemonicParsing="false" onAction="#sign" text="Sign" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                   <HBox.margin>
+                                       <Insets right="10.0" />
+                                   </HBox.margin>
+                               </Button>
+                              <ProgressIndicator fx:id="piSignProgress" progress="0.0" visible="false">
+                                 <HBox.margin>
+                                    <Insets left="10.0" />
+                                 </HBox.margin>
+                              </ProgressIndicator>
+                           </children>
+                        </HBox>
+                        <Label text="Target JAR:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                        <TextField fx:id="tfTargetFile" onKeyPressed="#clearValidationErrors" onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <tooltip>
+                              <Tooltip text="Required - The signed JAR (Can be the same as Source JAR)" />
+                           </tooltip>
+                        </TextField>
+                        <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#browseTarget" text="Browse" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" onAction="#copySourceToTarget" text="Copy">
+                                 <HBox.margin>
+                                    <Insets left="2.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </GridPane>
+                  <VBox fx:id="console">
+                     <children>
+                        <HBox styleClass="consoleTitle" VBox.vgrow="NEVER">
+                           <children>
+                              <Label text="Console" />
+                           </children>
+                        </HBox>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" styleClass="console" VBox.vgrow="ALWAYS">
+                           <children>
+                              <TextArea fx:id="txtConsole" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </VBox>
+               </items>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </SplitPane>
          </items>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
       </SplitPane>
       <Label fx:id="lblStatus" VBox.vgrow="NEVER">
          <VBox.margin>
