[#10 status: Ready for Retest] Adds About screen

--- a/resignator/src/main/resources/css/resignator.css
+++ b/resignator/src/main/resources/css/resignator.css
@@ -25,3 +25,8 @@
 	-fx-border-radius: 4;
 	-fx-background-color: pink;
 }
+
+.aboutLabel {
+    -fx-text-fill: rgb(240,240,240);
+    -fx-font: normal normal 24pt "Franklin Gothic Medium,Verdana,sans-serif"
+}
