[#26 status: Ready for Retest] Added reset data file workflow Fixed non-closing data files with try-with-resources blocks

--- a/resignator/src/main/resources/fxml/Password.fxml
+++ b/resignator/src/main/resources/fxml/Password.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bekwam.resignator.PasswordController">
+<?import javafx.scene.text.Font?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+      minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" fx:controller="com.bekwam.resignator.PasswordController">
    <children>
       <VBox>
          <children>
@@ -15,11 +14,22 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <VBox spacing="4.0">
+            <VBox fx:id="vboxContents" spacing="4.0">
                <children>
                   <Label text="Password" />
                   <PasswordField fx:id="pfPassword" />
-                  <Label fx:id="lblError" text="Password does not match datastore." textFill="RED" />
+                  <VBox fx:id="vboxErr">
+                     <children>
+                        <Label text="Password does not match datastore." textFill="RED"/>
+                        <HBox alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="Forgot password? Click "/>
+                              <Hyperlink onAction="#resetDataFile" text="here"/>
+                              <Label text="to reset the data file."/>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
                </children>
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
