--- a/resignator/src/main/resources/fxml/NewPassword.fxml
+++ b/resignator/src/main/resources/fxml/NewPassword.fxml
@@ -6,7 +6,6 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bekwam.resignator.NewPasswordController">
    <children>
       <VBox>
@@ -37,7 +36,7 @@
       <HBox alignment="CENTER" spacing="4.0">
          <children>
             <Button defaultButton="true" mnemonicParsing="false" onAction="#ok" prefWidth="60.0" text="Ok" />
-            <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel" prefWidth="60.0" text="Cancel" />
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
          </children>
          <padding>
             <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
