--- a/resignator/src/main/resources/fxml/Password.fxml
+++ b/resignator/src/main/resources/fxml/Password.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-      minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" fx:controller="com.bekwam.resignator.PasswordController">
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bekwam.resignator.PasswordController">
    <children>
       <VBox>
          <children>
@@ -20,12 +23,12 @@
                   <PasswordField fx:id="pfPassword" />
                   <VBox fx:id="vboxErr">
                      <children>
-                        <Label text="Password does not match datastore." textFill="RED"/>
+                        <Label text="Password does not match datastore." textFill="RED" />
                         <HBox alignment="CENTER_LEFT">
                            <children>
-                              <Label text="Forgot password? Click "/>
-                              <Hyperlink onAction="#resetDataFile" text="here"/>
-                              <Label text="to reset the data file."/>
+                              <Label text="Forgot password? Click " />
+                              <Hyperlink onAction="#resetDataFile" text="here" />
+                              <Label text="to reset the data file." />
                            </children>
                         </HBox>
                      </children>
@@ -44,7 +47,7 @@
       <HBox alignment="CENTER" spacing="4.0">
          <children>
             <Button defaultButton="true" mnemonicParsing="false" onAction="#ok" prefWidth="60.0" text="Ok" />
-            <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel" prefWidth="60.0" text="Cancel" />
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
          </children>
          <padding>
             <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
