--- a/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
+++ b/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
@@ -1,53 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.input.*?>
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-      minWidth="-Infinity" xmlns="http://javafx.com/javafx/8"
-      fx:controller="com.bekwam.resignator.ResignatorAppMainViewController">
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bekwam.resignator.ResignatorAppMainViewController">
    <children>
       <MenuBar VBox.vgrow="NEVER">
         <menus>
-            <Menu text="_File">
+          <Menu mnemonicParsing="false" text="File">
             <items>
-                <MenuItem onAction="#newProfile" text="_New Profile">
+                  <MenuItem mnemonicParsing="false" onAction="#newProfile" text="New Profile">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="N" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                      </accelerator></MenuItem>
-                <MenuItem onAction="#loadProfile" text="_Load Profile"/>
-                <Menu fx:id="mRecentProfiles" text="_Recent Profiles">
+                  <MenuItem mnemonicParsing="false" onAction="#loadProfile" text="Load Profile" />
+                <Menu fx:id="mRecentProfiles" mnemonicParsing="false" text="Recent Profiles">
                     <items>
                         <MenuItem mnemonicParsing="false" text="&lt; None &gt;" />
                     </items>
                 </Menu>
                 <SeparatorMenuItem mnemonicParsing="false" />
-                <MenuItem fx:id="miSave" disable="true" onAction="#saveProfile" text="_Save Profile">
+                <MenuItem fx:id="miSave" disable="true" mnemonicParsing="false" onAction="#saveProfile" text="Save Profile">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="S" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                      </accelerator></MenuItem>
-                <MenuItem onAction="#saveAsProfile" text="Save _As Profile"/>
+                  <MenuItem mnemonicParsing="false" onAction="#saveAsProfile" text="Save As Profile" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                <MenuItem onAction="#openSettings" text="S_ettings"/>
-                <MenuItem onAction="#changePassword" text="_Change Password"/>
+                  <MenuItem mnemonicParsing="false" onAction="#openSettings" text="Settings" />
+                  <MenuItem mnemonicParsing="false" onAction="#changePassword" text="Change Password" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                <MenuItem onAction="#close" text="Close">
+              <MenuItem mnemonicParsing="false" onAction="#close" text="Close">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="W" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                      </accelerator></MenuItem>
             </items>
           </Menu>
-            <Menu text="_View">
+            <Menu mnemonicParsing="false" text="View">
               <items>
-                  <CheckMenuItem onAction="#showProfileBrowser" selected="true" text="Show _Profile Browser"/>
-                  <CheckMenuItem onAction="#showConsole" selected="true" text="Show _Console"/>
+                  <CheckMenuItem mnemonicParsing="false" onAction="#showProfileBrowser" selected="true" text="Show Profile Browser" />
+                  <CheckMenuItem mnemonicParsing="false" onAction="#showConsole" selected="true" text="Show Console" />
               </items>
             </Menu>
-            <Menu text="_Help">
+          <Menu mnemonicParsing="false" text="Help">
             <items>
-                <MenuItem onAction="#showAbout" text="_About"/>
-                <MenuItem fx:id="miHelp" onAction="#showHelp" text="_Help"/>
+              <MenuItem mnemonicParsing="false" onAction="#showAbout" text="About" />
+                  <MenuItem fx:id="miHelp" mnemonicParsing="false" onAction="#showHelp" text="Help" />
             </items>
           </Menu>
         </menus>
@@ -98,25 +98,6 @@
                            </tooltip>
                         </TextField>
                         <Button mnemonicParsing="false" onAction="#browseSource" text="Browse" GridPane.columnIndex="2" />
-                         <Label text="Target JAR:" GridPane.halignment="RIGHT" GridPane.rowIndex="1"/>
-                         <TextField fx:id="tfTargetFile" onKeyPressed="#clearValidationErrors"
-                                    onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1"
-                                    GridPane.rowIndex="1">
-                             <tooltip>
-                                 <Tooltip text="Required - The signed JAR (Can be the same as Source JAR)"/>
-                             </tooltip>
-                         </TextField>
-                         <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.rowIndex="1">
-                             <children>
-                                 <Button mnemonicParsing="false" onAction="#browseTarget" text="Browse"
-                                         GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                                 <Button mnemonicParsing="false" onAction="#copySourceToTarget" text="Copy">
-                                     <HBox.margin>
-                                         <Insets left="2.0"/>
-                                     </HBox.margin>
-                                 </Button>
-                             </children>
-                         </HBox>
                          <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <children>
                                <Button mnemonicParsing="false" onAction="#openJarsignerConfig" text="Configure">
@@ -139,6 +120,22 @@
                                     <Insets left="10.0" />
                                  </HBox.margin>
                               </ProgressIndicator>
+                           </children>
+                        </HBox>
+                        <Label text="Target JAR:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                        <TextField fx:id="tfTargetFile" onKeyPressed="#clearValidationErrors" onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <tooltip>
+                              <Tooltip text="Required - The signed JAR (Can be the same as Source JAR)" />
+                           </tooltip>
+                        </TextField>
+                        <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#browseTarget" text="Browse" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" onAction="#copySourceToTarget" text="Copy">
+                                 <HBox.margin>
+                                    <Insets left="2.0" />
+                                 </HBox.margin>
+                              </Button>
                            </children>
                         </HBox>
                      </children>
